--- a/e2e/provision/playbooks/roles/install/tasks/main.yml
+++ b/e2e/provision/playbooks/roles/install/tasks/main.yml
@@ -75,46 +75,46 @@
     context: "{{ k8s.context }}"
     namespace: "{{ nephio_webui.k8s.namespace }}"
 
-- name: Create stock repositories
-  kubernetes.core.k8s:
-    state: present
-    context: "{{ k8s.context }}"
-    definition:
-      apiVersion: config.porch.kpt.dev/v1alpha1
-      kind: Repository
-      metadata:
-        name: "{{ item.name }}"
-        namespace: default
-        labels:
-          kpt.dev/repository-access: read-only
-          kpt.dev/repository-content: external-blueprints
-      spec:
-        content: Package
-        deployment: false
-        git:
-          branch: "{{ item.branch }}"
-          directory: "{{ item.directory }}"
-          repo: "{{ item.repo }}"
-        type: git
-  loop: "{{ nephio_stock_repos }}"
+# - name: Create stock repositories
+#   kubernetes.core.k8s:
+#     state: present
+#     context: "{{ k8s.context }}"
+#     definition:
+#       apiVersion: config.porch.kpt.dev/v1alpha1
+#       kind: Repository
+#       metadata:
+#         name: "{{ item.name }}"
+#         namespace: default
+#         labels:
+#           kpt.dev/repository-access: read-only
+#           kpt.dev/repository-content: external-blueprints
+#       spec:
+#         content: Package
+#         deployment: false
+#         git:
+#           branch: "{{ item.branch }}"
+#           directory: "{{ item.directory }}"
+#           repo: "{{ item.repo }}"
+#         type: git
+#   loop: "{{ nephio_stock_repos }}"
 
-- name: Wait for stock repositories
-  kubernetes.core.k8s:
-    context: "{{ k8s.context }}"
-    definition:
-      apiVersion: config.porch.kpt.dev/v1alpha1
-      kind: Repository
-      metadata:
-        name: "{{ item }}"
-        namespace: default
-    wait: true
-    wait_condition:
-      type: Ready
-      status: true
-  loop:
-    - catalog-infra-capi
-    - catalog-nephio-core
-    - catalog-nephio-optional
-    - catalog-workloads-free5gc
-    - catalog-workloads-oai-ran
-    - oai-core-packages
+# - name: Wait for stock repositories
+#   kubernetes.core.k8s:
+#     context: "{{ k8s.context }}"
+#     definition:
+#       apiVersion: config.porch.kpt.dev/v1alpha1
+#       kind: Repository
+#       metadata:
+#         name: "{{ item }}"
+#         namespace: default
+#     wait: true
+#     wait_condition:
+#       type: Ready
+#       status: true
+#   loop:
+#     - catalog-infra-capi
+#     - catalog-nephio-core
+#     - catalog-nephio-optional
+#     - catalog-workloads-free5gc
+#     - catalog-workloads-oai-ran
+#     - oai-core-packages
