--- a/e2e/provision/playbooks/roles/bootstrap/defaults/main.yml
+++ b/e2e/provision/playbooks/roles/bootstrap/defaults/main.yml
@@ -29,7 +29,7 @@ k8s:
 kind:
   enabled: true
 
-nephio_catalog_repo_uri: https://github.com/trhthang/catalog.git
+nephio_catalog_repo_uri: https://github.com/nephio-project/catalog.git
 nephio_catalog_revision: v2.0.0
 
 gitea:
