--- a/e2e/provision/playbooks/roles/install/defaults/main.yml
+++ b/e2e/provision/playbooks/roles/install/defaults/main.yml
@@ -117,6 +117,11 @@ nephio:
         async: 480
         poll: 5
       - repo_uri: "{{ nephio_catalog_repo_uri }}"
+        pkg: nephio/core/argo-cd-core
+        version: main
+        async: 480
+        poll: 5
+      - repo_uri: "{{ nephio_catalog_repo_uri }}"
         pkg: nephio/core/configsync
         version: main
         async: 240
