--- a/e2e/provision/playbooks/roles/install/defaults/main.yml
+++ b/e2e/provision/playbooks/roles/install/defaults/main.yml
@@ -95,6 +95,58 @@ nephio_catalog_branch: main
 #       version: main
 
 
+
+## Chưa xóa configsync:
+# nephio:
+#   k8s:
+#     namespaces:
+#       - porch-fn-system
+#       - porch-system
+#       - nephio-system
+#       - config-management-monitoring
+#       - config-management-system
+#       - resource-group-system
+#   kpt:
+#     packages:
+#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
+#         pkg: nephio/core/porch
+#         version: main
+#         async: 480
+#         poll: 5
+#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
+#         pkg: nephio/core/nephio-operator
+#         version: main
+#         async: 480
+#         poll: 5
+#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
+#         pkg: nephio/core/argo-cd-core
+#         version: main
+#         async: 480
+#         poll: 5
+#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
+#         pkg: nephio/core/configsync
+#         version: main
+#         async: 240
+#         poll: 5
+
+# nephio_webui:
+#   k8s:
+#     namespace: nephio-webui
+#   kpt:
+#     package:
+#       repo_uri: "{{ nephio_catalog_repo_uri }}"
+#       pkg: nephio/optional/webui
+#       version: main
+
+
+nephio_stock_repos:
+  - name: catalog-infra-capi
+    repo: "{{ nephio_catalog_repo_uri }}"
+    directory: /infra/capi
+    branch: "{{ nephio_catalog_branch }}"
+
+## Xóa configsync
+
 nephio:
   k8s:
     namespaces:
@@ -120,11 +172,6 @@ nephio:
         pkg: nephio/core/argo-cd-core
         version: main
         async: 480
-        poll: 5
-      - repo_uri: "{{ nephio_catalog_repo_uri }}"
-        pkg: nephio/core/configsync
-        version: main
-        async: 240
         poll: 5
 
 nephio_webui:
