--- a/e2e/provision/playbooks/roles/install/defaults/main.yml
+++ b/e2e/provision/playbooks/roles/install/defaults/main.yml
@@ -103,49 +103,6 @@ nephio_stock_repos:
 
 
 ## Chưa xóa configsync:
-nephio:
-  k8s:
-    namespaces:
-      - porch-fn-system
-      - porch-system
-      - nephio-system
-      - config-management-monitoring
-      - config-management-system
-      - resource-group-system
-  kpt:
-    packages:
-      - repo_uri: "{{ nephio_catalog_repo_uri }}"
-        pkg: nephio/core/porch
-        version: main
-        async: 480
-        poll: 5
-      - repo_uri: "{{ nephio_catalog_repo_uri }}"
-        pkg: nephio/core/nephio-operator
-        version: main
-        async: 480
-        poll: 5
-      - repo_uri: "{{ nephio_catalog_repo_uri }}"
-        pkg: nephio/core/argo-cd-core
-        version: main
-        async: 480
-        poll: 5
-      - repo_uri: "{{ nephio_catalog_repo_uri }}"
-        pkg: nephio/core/configsync
-        version: main
-        async: 240
-        poll: 5
-
-nephio_webui:
-  k8s:
-    namespace: nephio-webui
-  kpt:
-    package:
-      repo_uri: "{{ nephio_catalog_repo_uri }}"
-      pkg: nephio/optional/webui
-      version: main
-
-### Xóa configsync
-
 # nephio:
 #   k8s:
 #     namespaces:
@@ -172,6 +129,11 @@ nephio_webui:
 #         version: main
 #         async: 480
 #         poll: 5
+#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
+#         pkg: nephio/core/configsync
+#         version: main
+#         async: 240
+#         poll: 5
 
 # nephio_webui:
 #   k8s:
@@ -181,6 +143,44 @@ nephio_webui:
 #       repo_uri: "{{ nephio_catalog_repo_uri }}"
 #       pkg: nephio/optional/webui
 #       version: main
+
+### Xóa configsync
+
+nephio:
+  k8s:
+    namespaces:
+      - porch-fn-system
+      - porch-system
+      - nephio-system
+      - config-management-monitoring
+      - config-management-system
+      - resource-group-system
+  kpt:
+    packages:
+      - repo_uri: "{{ nephio_catalog_repo_uri }}"
+        pkg: nephio/core/porch
+        version: main
+        async: 480
+        poll: 5
+      - repo_uri: "{{ nephio_catalog_repo_uri }}"
+        pkg: nephio/core/nephio-operator
+        version: main
+        async: 480
+        poll: 5
+      - repo_uri: "{{ nephio_catalog_repo_uri }}"
+        pkg: nephio/core/argo-cd-core
+        version: main
+        async: 480
+        poll: 5
+
+nephio_webui:
+  k8s:
+    namespace: nephio-webui
+  kpt:
+    package:
+      repo_uri: "{{ nephio_catalog_repo_uri }}"
+      pkg: nephio/optional/webui
+      version: main
 
 # xóa nephio controller:
 
