--- a/e2e/provision/playbooks/roles/install/defaults/main.yml
+++ b/e2e/provision/playbooks/roles/install/defaults/main.yml
@@ -146,44 +146,6 @@ nephio_stock_repos:
 
 ### Xóa configsync
 
-# nephio:
-#   k8s:
-#     namespaces:
-#       - porch-fn-system
-#       - porch-system
-#       - nephio-system
-#       - config-management-monitoring
-#       - config-management-system
-#       - resource-group-system
-#   kpt:
-#     packages:
-#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
-#         pkg: nephio/core/porch
-#         version: main
-#         async: 480
-#         poll: 5
-#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
-#         pkg: nephio/core/nephio-operator
-#         version: main
-#         async: 480
-#         poll: 5
-#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
-#         pkg: nephio/core/argo-cd-core
-#         version: main
-#         async: 480
-#         poll: 5
-
-# nephio_webui:
-#   k8s:
-#     namespace: nephio-webui
-#   kpt:
-#     package:
-#       repo_uri: "{{ nephio_catalog_repo_uri }}"
-#       pkg: nephio/optional/webui
-#       version: main
-
-# xóa nephio controller:
-
 nephio:
   k8s:
     namespaces:
@@ -201,6 +163,11 @@ nephio:
         async: 480
         poll: 5
       - repo_uri: "{{ nephio_catalog_repo_uri }}"
+        pkg: nephio/core/nephio-operator
+        version: main
+        async: 480
+        poll: 5
+      - repo_uri: "{{ nephio_catalog_repo_uri }}"
         pkg: nephio/core/argo-cd-core
         version: main
         async: 480
@@ -214,3 +181,36 @@ nephio_webui:
       repo_uri: "{{ nephio_catalog_repo_uri }}"
       pkg: nephio/optional/webui
       version: main
+
+# xóa nephio controller:
+
+# nephio:
+#   k8s:
+#     namespaces:
+#       - porch-fn-system
+#       - porch-system
+#       - nephio-system
+#       - config-management-monitoring
+#       - config-management-system
+#       - resource-group-system
+#   kpt:
+#     packages:
+#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
+#         pkg: nephio/core/porch
+#         version: main
+#         async: 480
+#         poll: 5
+#       - repo_uri: "{{ nephio_catalog_repo_uri }}"
+#         pkg: nephio/core/argo-cd-core
+#         version: main
+#         async: 480
+#         poll: 5
+
+# nephio_webui:
+#   k8s:
+#     namespace: nephio-webui
+#   kpt:
+#     package:
+#       repo_uri: "{{ nephio_catalog_repo_uri }}"
+#       pkg: nephio/optional/webui
+#       version: main
